--- a/src/Pages/main.css
+++ b/src/Pages/main.css
@@ -240,16 +240,26 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 50px;
-  background-color: #2638d9;
+  background-color: #B3D658;
 }
-
-.maincolorf:nth-child(2) {
-  background-color: #B3D656;
+.maincolorf5 {
+  background-color: #a8a8a8;
 }
 
 .maincolorf:nth-child(3) {
+  background-color: #2C55ED;
+}
 
-  background-color: #EF5C28;
+.maincolorf:nth-child(4) {
+
+  background-color: #E0076A;
+}
+.fgjkdfgjk{
+  color: #fff;
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .dfnghdhbf {
@@ -259,6 +269,10 @@ body {
   top: 90vh;
 }
 
+.gkhlkfghfg{
+  color: #fff;
+  padding-left: 10px;
+}
 .hchdfc {
   font-size: 25px;
   cursor: pointer;
@@ -2190,7 +2204,7 @@ canvas {
   width: 350px;
   height: 230px;
   position: absolute;
-  z-index: 2;
+  z-index: 9999;
   right: 50%;
   color: #fff;
   margin-top: -240px;
@@ -2387,4 +2401,8 @@ margin-top: -90px;
 
 .menuToggle.open ~ .sliding-header {
   transform: translateX(0);
+}
+.fgdfkgldkfg{
+  background-color: #000;
+  z-index: 999;
 }
