--- a/src/Pages/main.css
+++ b/src/Pages/main.css
@@ -2407,3 +2407,10 @@ margin-top: -90px;
   background-color: #000;
   z-index: 999;
 }
+.w-20{
+  width: 20%;
+}
+.w-20 img{
+  width: 300px;
+  height: 300px;
+}
