10 case done & all startiges done

--- a/src/Component/module.css
+++ b/src/Component/module.css
@@ -1357,3 +1357,9 @@ text-align: left;
   list-style-type: none;
 
 }
+.hedlineofpop{
+  font-size: 26px;
+}
+.mainlinkonpopup{
+  color: rgb(59, 59, 59);
+}
