--- a/src/Component/module.css
+++ b/src/Component/module.css
@@ -1226,7 +1226,7 @@ text-align: left;
 }
 
 .imageofbk {
-  width: 100%;
+  height: 200px;
 
 }
 
@@ -1358,8 +1358,29 @@ text-align: left;
 
 }
 .hedlineofpop{
-  font-size: 26px;
+  font-size: 22px;
 }
 .mainlinkonpopup{
-  color: rgb(59, 59, 59);
+  color: #FFF;
+}
+.mainlinkonpopup{
+  text-align: right;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+/*  */
+}
+
+
+.load-more-button{
+  border: 1px solid #2857EF;
+  border-radius: 40px;
+  background-color: #fff;
+  padding: 10px 25px;
+  margin-bottom: 40px;
+
+}
+.back-color{
+  text-transform: uppercase;
 }
