--- a/src/Pages/main.css
+++ b/src/Pages/main.css
@@ -2437,7 +2437,7 @@ margin-top: -90px;
 
 
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 600px) {
   .particale-section {
     display: none;
   }
