--- a/src/Pages/main.css
+++ b/src/Pages/main.css
@@ -2474,7 +2474,7 @@ margin-top: -90px;
 .Flyout {
   position: absolute;
   top: 150px;
-  right: 50%;
+  right: 10%;
 }
 .main-bodyfront{
   overflow: hidden;
@@ -2545,12 +2545,13 @@ margin-top: -90px;
   font-size: 18px !important;
 }
 .anothersectionpeop {
-  height: 50vh;
+  height: 60vh;
 
 }
 .colortags {
-
+  padding:5px 5px;
   font-size: 12px;
+  border-radius: 12px;
 }
 .colortags2 {
   left: 40%;
@@ -2642,7 +2643,7 @@ margin-top: -90px;
 }
 
 .case-study-image {
-  width: 40%;
+  width: 30%;
   height: auto;
 }
 
@@ -2676,9 +2677,6 @@ margin-top: -90px;
   align-self: center;
 }
 
-.load-more-button:hover {
-  background-color: #0056b3;
-}
 .filter-wrapper{
   display: flex;
 }
@@ -2710,6 +2708,29 @@ margin-top: -90px;
 
 
 
+.case-study-card {
+  position: relative;
+  overflow: hidden;
+}
+
+.case-study-card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)); /* Adjust the gradient as needed */
+  pointer-events: none; /* Allows interactions to pass through the overlay */
+}
+
+
+.vis{
+  display: block !important;
+}
+.hiden{
+  display: none !important;
+}
 }
 
 .logo {
@@ -2723,6 +2744,7 @@ margin-top: -90px;
 @media (max-width: 768px) {
   .logo-mobile {
     display: block;
+    width: 70%;
   }
 }
 
@@ -2734,4 +2756,10 @@ margin-top: -90px;
 
 .particale-sectionm{
   display: none;
+}
+.vis{
+  display: none;
+}
+.hiden{
+  display: block;
 }
